// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Variants accent displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-accent-warm-lighter text-accent-warm-darker text-no-wrap"
    >
      Accent Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants base displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-base-lighter text-base-dark text-no-wrap"
    >
      Base Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants baseDark displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-white text-base-dark border usa-tag-padding-override text-no-wrap"
    >
      BaseDark Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants completed displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-primary-lightest text-primary-dark text-no-wrap"
    >
      Primary Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants inProgress displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-accent-cool-lighter text-accent-cool-darker text-no-wrap"
    >
      Info Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants notStarted displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-base-lighter text-base-dark text-no-wrap"
    >
      Base Test
    </span>
  </div>
</body>
`;

exports[`Tag completed Bold displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-primary-lightest text-primary-dark text-no-wrap text-bold"
    >
      Primary Test
    </span>
  </div>
</body>
`;

exports[`Tag completed textWrap displays correctly 1`] = `
<body>
  <div>
    <span
      class="flex flex-align-center flex-justify usa-tag font-sans-2xs width-full width-auto line-height-sans-2 padding-y-2px bg-primary-lightest text-primary-dark text-wrap display-block"
    >
      Primary Test with a really really really really long child
    </span>
  </div>
</body>
`;
